creacion de las paginas html restantes y adaptacion al primer css

--- a/Noticias.html
+++ b/Noticias.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRACKS</title>
+    <title>Cracks Noticias</title>
     <link rel="stylesheet" href="./css/CSS.css" type="text/css">
 </head>
 
@@ -16,7 +16,7 @@
                 CRACKS
             </h1>
 
-            <img src="./images/cracks.png" alt="HTML5">
+            <img src="./images/noticias.png" alt="HTML5">
 
         </header>
     </div>
@@ -35,12 +35,17 @@
 
     <div id="caja3">
         <section>
-            <h2> PAGINA OFICIAL</h2>
+            <h2>  Hazard, sobre ir al Madrid: "Ya veremos al final de temporada"</h2>
+            <img src="./images/Hazard.png" alt="Curbside Thai" />
+
             <article>
                 <p>
-                    El informativo sobre fútbol internacional más grande y más visto de YouTube.
-                    Las noticias, curiosidades,polémicas, videos y lo que no se ve en los noticieros,
-                    AQUÍ. En la mejor pagina de fútbol
+                    Maurizio Sarri, entrenador de Hazard en el Chelsea, habló al final del partido sobre la situación de su
+                estrella: "Si Hazard quiere tener otra experiencia es muy difícil mantenerlo aquí. ¿100 millones de
+                libras? Me parece demasiado barato, en este mercado es muy barato".
+
+                También habló Eden Hazard del Real Madrid al finalizar el partido que el Chelsea disputó ante el West
+                Ham y en el que recuperó la tercera plaza tras ganar 2-0 con un doblete de la estrella belga.
                 </p>
             </article>
         </section>
@@ -48,7 +53,6 @@
         <section>
             <aside>
 
-                <img src="./images/princip.PNG" alt="HTML5">
 
             </aside>
 
