--- a/Partidos.html
+++ b/Partidos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRACKS</title>
+    <title>Cracks Partidos</title>
     <link rel="stylesheet" href="./css/CSS.css" type="text/css">
 </head>
 
@@ -16,7 +16,7 @@
                 CRACKS
             </h1>
 
-            <img src="./images/cracks.png" alt="HTML5">
+            <img src="./images/partidos.PNG" alt="HTML5">
 
         </header>
     </div>
@@ -35,21 +35,28 @@
 
     <div id="caja3">
         <section>
-            <h2> PAGINA OFICIAL</h2>
+            <h2>PROXIMOS PARTIDOS</h2>
             <article>
                 <p>
-                    El informativo sobre fútbol internacional más grande y más visto de YouTube.
-                    Las noticias, curiosidades,polémicas, videos y lo que no se ve en los noticieros,
-                    AQUÍ. En la mejor pagina de fútbol
+                    El informativo sobre fútbol internacional más grande del mundo donde podras enterarte de cada partido
+                que vaya a disputarse y su Resultado
                 </p>
+                <h2>Champions League
+                    Cuartos - Ida</h2>
+                <img src="./images/champions.PNG" alt="Curbside Thai" />
+    
+                <h2>Ligue 1
+                    Jornada 27</h2>
+                <img src="./images/ligue1.PNG" alt="Curbside Thai" />
+    
+                <h2>Liga Paraguaya - Apertura
+                    Jornada 15</h2>
+                <img src="./images/paraguaya.PNG" alt="Curbside Thai" />
             </article>
         </section>
 
         <section>
             <aside>
-
-                <img src="./images/princip.PNG" alt="HTML5">
-
             </aside>
 
         </section>
