--- a/Traspasos.html
+++ b/Traspasos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRACKS</title>
+    <title>Cracks Traspasos</title>
     <link rel="stylesheet" href="./css/CSS.css" type="text/css">
 </head>
 
@@ -16,7 +16,7 @@
                 CRACKS
             </h1>
 
-            <img src="./images/cracks.png" alt="HTML5">
+            <img src="./images/Traspasos.PNG" alt="HTML5">
 
         </header>
     </div>
@@ -38,18 +38,20 @@
             <h2> PAGINA OFICIAL</h2>
             <article>
                 <p>
-                    El informativo sobre fútbol internacional más grande y más visto de YouTube.
-                    Las noticias, curiosidades,polémicas, videos y lo que no se ve en los noticieros,
-                    AQUÍ. En la mejor pagina de fútbol
+                    <img src="images/zidane.PNG" alt="Curbside Thai" />
+                    <h2>Juega a ser Zidane: ¿Qué harías con los cedidos del Madrid la próxima temporada?</h2>
                 </p>
+                <p>
+                    <img src="images/reis.PNG" alt="Curbside Thai" />
+                    <h2>En Holanda colocan a Reis en el Barça</h2>
+                </p>
+    
+
             </article>
         </section>
 
         <section>
             <aside>
-
-                <img src="./images/princip.PNG" alt="HTML5">
-
             </aside>
 
         </section>
