--- a/Videos.html
+++ b/Videos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CRACKS</title>
+    <title>Cracks Pagina Oficial</title>
     <link rel="stylesheet" href="./css/CSS.css" type="text/css">
 </head>
 
@@ -13,10 +13,10 @@
     <div id="caja1">
         <header>
             <h1>
-                CRACKS
+                Últimos Videos
             </h1>
 
-            <img src="./images/cracks.png" alt="HTML5">
+            <img src="./images/videos.PNG" alt="HTML5">
 
         </header>
     </div>
@@ -38,9 +38,15 @@
             <h2> PAGINA OFICIAL</h2>
             <article>
                 <p>
-                    El informativo sobre fútbol internacional más grande y más visto de YouTube.
-                    Las noticias, curiosidades,polémicas, videos y lo que no se ve en los noticieros,
-                    AQUÍ. En la mejor pagina de fútbol
+                    <h1>
+                        Los Mejores Videos aqui los podras encontrar
+                    </h1>
+                    <h1>Video de Youtube</h1>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GXg6H8Su6bU" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                    <p>Previa de la Champions desde el nuevo estadio de los Spurs. Insisten en Francia: Van por Pogba.
+                    </p>
                 </p>
             </article>
         </section>
@@ -48,7 +54,8 @@
         <section>
             <aside>
 
-                <img src="./images/princip.PNG" alt="HTML5">
+                <img src="./images/fac.PNG" alt="HTML5">
+                <img src="./images/twit.PNG" alt="HTML5">
 
             </aside>
 
