--- a/Noticias.html
+++ b/Noticias.html
@@ -29,23 +29,26 @@
                 <li>4 <a href="Traspasos.html">Traspasos</a></li>
                 <li>5 <a href="Videos.html">Videos</a></li>
                 <li>6 <a href="EquiposFav.html">Estadisticas</a></li>
+                <li>7 <a href="FORMULARIO.html">Formulario</a></li>
             </ul>
         </nav>
     </div>
 
     <div id="caja3">
         <section>
-            <h2>  Hazard, sobre ir al Madrid: "Ya veremos al final de temporada"</h2>
+            <h2> Hazard, sobre ir al Madrid: "Ya veremos al final de temporada"</h2>
             <img src="./images/Hazard.png" alt="Curbside Thai" />
 
             <article>
                 <p>
-                    Maurizio Sarri, entrenador de Hazard en el Chelsea, habló al final del partido sobre la situación de su
-                estrella: "Si Hazard quiere tener otra experiencia es muy difícil mantenerlo aquí. ¿100 millones de
-                libras? Me parece demasiado barato, en este mercado es muy barato".
+                    Maurizio Sarri, entrenador de Hazard en el Chelsea, habló al final del partido sobre la situación de
+                    su
+                    estrella: "Si Hazard quiere tener otra experiencia es muy difícil mantenerlo aquí. ¿100 millones de
+                    libras? Me parece demasiado barato, en este mercado es muy barato".
 
-                También habló Eden Hazard del Real Madrid al finalizar el partido que el Chelsea disputó ante el West
-                Ham y en el que recuperó la tercera plaza tras ganar 2-0 con un doblete de la estrella belga.
+                    También habló Eden Hazard del Real Madrid al finalizar el partido que el Chelsea disputó ante el
+                    West
+                    Ham y en el que recuperó la tercera plaza tras ganar 2-0 con un doblete de la estrella belga.
                 </p>
             </article>
         </section>
