--- a/Partidos.html
+++ b/Partidos.html
@@ -29,6 +29,7 @@
                 <li>4 <a href="Traspasos.html">Traspasos</a></li>
                 <li>5 <a href="Videos.html">Videos</a></li>
                 <li>6 <a href="EquiposFav.html">Estadisticas</a></li>
+                <li>7 <a href="FORMULARIO.html">Formulario</a></li>
             </ul>
         </nav>
     </div>
@@ -38,17 +39,18 @@
             <h2>PROXIMOS PARTIDOS</h2>
             <article>
                 <p>
-                    El informativo sobre fútbol internacional más grande del mundo donde podras enterarte de cada partido
-                que vaya a disputarse y su Resultado
+                    El informativo sobre fútbol internacional más grande del mundo donde podras enterarte de cada
+                    partido
+                    que vaya a disputarse y su Resultado
                 </p>
                 <h2>Champions League
                     Cuartos - Ida</h2>
                 <img src="./images/champions.PNG" alt="Curbside Thai" />
-    
+
                 <h2>Ligue 1
                     Jornada 27</h2>
                 <img src="./images/ligue1.PNG" alt="Curbside Thai" />
-    
+
                 <h2>Liga Paraguaya - Apertura
                     Jornada 15</h2>
                 <img src="./images/paraguaya.PNG" alt="Curbside Thai" />
