--- a/Index.html
+++ b/Index.html
@@ -29,6 +29,7 @@
                 <li>4 <a href="Traspasos.html">Traspasos</a></li>
                 <li>5 <a href="Videos.html">Videos</a></li>
                 <li>6 <a href="EquiposFav.html">Estadisticas</a></li>
+                <li>7 <a href="FORMULARIO.html">Formulario</a></li>
             </ul>
         </nav>
     </div>
